# monet

./: .gitignore  LICENSE  README.md
.github/workflows/: deploy-backend.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py  prompts.py  schemas.py  session.py  storage.py  utils.py
backend/app/agents/: __init__.py
backend/app/agents/code/: __init__.py  agent.py  prompts.md  tools.py
backend/app/agents/image/: __init__.py  tool.py
backend/app/agents/orchestrator/: __init__.py  agent.py  prompts.md
frontend/: .env.example  .example.env  .gitignore  components.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/app/[slug]/: page.tsx
frontend/components/: ambient-edge-glow.tsx  blur-reveal.tsx  bottom-bar-voice-controls.tsx  code-runner-react.tsx  code-runner.tsx  code-viewer.tsx  deploy-modal.tsx  glass-surface.tsx  grainient.tsx  home-screen-transition.tsx  signature.tsx  tldraw-overlay.tsx
frontend/components/agents-ui/: agent-audio-visualizer-aura.tsx  react-shader-toy.tsx
frontend/components/ui/: dom-gallery.tsx  liquid-glass.tsx  tooltip.tsx
frontend/hooks/: use-home-screen-transition.ts  use-websocket.ts
frontend/hooks/agents-ui/: use-agent-audio-visualizer-aura.ts
frontend/lib/: audio-player.ts  audio-recorder.ts  canvas-utils.ts  color-utils.ts  sandpack-config.ts  sandpack-syntax.ts  utils.ts  websocket.ts
frontend/public/worklets/: pcm-player-processor.js  pcm-recorder-processor.js
(+1 files in other folders)
